--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               <span class="tech-tag">CSS3</span>
               <span class="tech-tag">DOM API</span>
             </div>
-            <a href="index.html" class="project-link">View Project</a>
+            <a href="index1.html" class="project-link">View Project</a>
             <a href="https://github.com/yourusername/stopwatch-app" class="project-link" style="margin-left:1.2rem;" target="_blank">View Code</a>
           </div>
         </div>
